--- a/frontend/src/conponents/Description.css
+++ b/frontend/src/conponents/Description.css
@@ -61,4 +61,10 @@
 .link-container {
   text-decoration: none;
   font-weight: 500;
+  font-size: 18px;
+}
+.description-section .btn-primary {
+  font-size: 18px;
+  padding: 12px 30px;
+  color: #e61b1b; /* Add this line to set the text color */
 }
