--- a/frontend/src/conponents/FilterBox.css
+++ b/frontend/src/conponents/FilterBox.css
@@ -10,7 +10,7 @@
 
 .search-title {
   font-size: 1.2rem;
-  color: #333;
+  color: #0a0a0a;
   margin-bottom: 15px;
 }
 
@@ -33,20 +33,21 @@
 
 .field-label {
   font-size: 0.9rem;
-  color: #555;
+  color: #030303dc;
   margin-right: 10px;
   flex-basis: 150px;
+  font-weight: 500;
 }
 
 .calendar-icon {
   font-size: 1.2rem;
-  color: #1abc9c;
+  color: #0d6efd;
   margin-right: 5px;
 }
 
 .clock-icon {
   font-size: 1.2rem;
-  color: #1abc9c;
+  color: #1a2abc;
   margin-right: 5px;
 }
 
@@ -59,7 +60,7 @@
 
 .search-button {
   padding: 10px 20px;
-  background-color: #1abc9c;
+  background-color: #0d6efd;
   color: white;
   border: none;
   border-radius: 4px;
@@ -68,5 +69,5 @@
 }
 
 .search-button:hover {
-  background-color: #168b75;
+  background-color: #0d6efd;;
 }
